@@ -23,6 +23,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14971: unittest test discovery no longer gets confused when a function
+  has a different __name__ than its name in the TestCase class dictionary.
+
 - Issue #17678: Fix DeprecationWarning in the http/cookiejar.py by changing the
   usage of get_origin_req_host() to origin_req_host.
 
